feat: add koshu

--- a/public/index.css
+++ b/public/index.css
@@ -20,3 +20,8 @@ p {
 .logo-font {
   font-family: "Yuji Syuku", serif;
 }
+
+.kaido-title {
+  font-size: 1.2em;
+  font-family: "Yuji Syuku", serif;
+}
